bin_PROGRAMS = standingsbuilder
standingsbuilder_SOURCES = Contest.cpp \
                            Contest.h \
                            Event.cpp \
                            Event.h \
                            GenericParserBuilder.cpp \
                            GenericParserBuilder.h \
                            GetPage.cpp \
                            GetPage.h \
                            main.cpp \
                            Parser.cpp \
                            Parser.h \
                            Result.cpp \
                            Result.h \
                            singletone.h \
                            Team.cpp \
                            Team.h \
                            Unroller.cpp \
                            Unroller.h \
                            XMLParser.cpp \
                            XMLParser.h \
                            Parsers/EjudgeFileParser.cpp\
                            Parsers/EjudgeFileParser.h\
                            Parsers/EjudgeLinkParser.cpp\
                            Parsers/EjudgeLinkParser.h\
                            Parsers/EjudgeParser.cpp\
                            Parsers/EjudgeParser.h\
                            Parsers/NEERCXmlParser.cpp\
                            Parsers/NEERCXmlParser.h\
                            Parsers/NEERCHtmlParser.cpp\
                            Parsers/NEERCHtmlParser.h\
                            Parsers/Timer.cpp\
                            Parsers/Timer.h
INCLUDES = @standingsbuilder_CFLAGS@
standingsbuilder_LDADD = @standingsbuilder_LIBS@

